scrollbar fixes

--- a/src/components/playerList.css
+++ b/src/components/playerList.css
@@ -7,6 +7,7 @@
     backface-visibility: hidden;-webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    z-index: 1;
 }
 .player-list {
     background-image: url("/src/assets/clue-output.png");
@@ -27,7 +28,6 @@
     white-space: nowrap;
     overflow: scroll;
 }
-
 .player-list-length {
     font-size: 3vw;
     left: 2.25vw;
