--- a/src/main.css
+++ b/src/main.css
@@ -15,3 +15,12 @@ body {
     image-rendering: -moz-crisp-edges;
     image-rendering: crisp-edges;
 }
+*::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
